<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ase.eu.proiect.busWayBucharest.AboutActivity"
    android:id="@+id/about_relativeLayout"
    >

    <TextView
        android:id="@+id/about_textView_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_application_name"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@android:color/darker_gray"
        android:layout_alignParentTop="true"
        />
    <TextView
        android:id="@+id/about_textView_copyRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_copyRight"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/about_textView_name"
        />
    <TextView
        android:id="@+id/about_textView_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_text"
        android:textColor="@color/white"
        android:background="@android:color/darker_gray"
        android:layout_below="@id/about_textView_copyRight"
        />
    <TextView
        android:id="@+id/about_textView_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_year"
        android:layout_below="@id/about_textView_about"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@android:color/darker_gray"
        />
    <Button
        android:id="@+id/about_btn_goToFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_textView_year"
        android:layout_marginTop="10dp"
        android:text="@string/about_feedback_button"
        android:textAllCaps="false"
        android:background="@color/main_button_background"
        android:textColor="@color/white"
        android:onClick="goToFeedback"
        />
    <RatingBar
        android:id="@+id/about_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />
</RelativeLayout>
