<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/feedback_linearLayout_parent"
        android:orientation="vertical"
    >
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:id="@+id/feedback_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_hint_name"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorAccent"
        />
    <EditText
        android:id="@+id/feedback_editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/feedback_hint_name"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/feedback_tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_hint_email"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:id="@+id/feedback_editText_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/feedback_hint_email"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/feedback_tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_hint_phone"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:id="@+id/feedback_editText_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/feedback_hint_phone"/>
    </LinearLayout>
    <TextView
        android:id="@+id/feedback_whatHappend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_textView"
        android:layout_marginLeft="5dp"
        android:textColor="@color/black"
        />
    <DatePicker
        android:id="@+id/feedback_datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:calendarViewShown="false"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/feedback_tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_hint_feedbackText"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorAccent"
            />
        <EditText
            android:id="@+id/feedback_editText_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/feedback_hint_feedbackText"
            />

    </LinearLayout>
        <ImageView
            android:id="@+id/feedback_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@android:drawable/ic_menu_report_image" />
            <Button
                android:id="@+id/feedback_imageFromGallery_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_imageFromGallery_btn"
                android:background="@android:color/background_light"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:onClick="goToImageFromGallery"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/feedback_imageFromURL_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/feedback_imageFromURL_et"
                    android:textColor="@color/colorAccent"
                    />
                <EditText
                    android:id="@+id/feedback_imageFromURL_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/feedback_imageFromURL_et"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/feedback_imageFromURL_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_imageFromURL_btn"
                android:background="@android:color/background_light"
                android:layout_marginLeft="5dp"
                android:textAllCaps="false"
                android:onClick="goToImageFromURL"
                />
        <TextView
        android:id="@+id/textView_seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_seekBar_text"
        />
    <SeekBar
        android:id="@+id/feedback_seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:max="5"
        android:layout_marginLeft="5dp"
        />
    <TextView
        android:id="@+id/feedback_tv_seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/colorAccent"
        />

    <CheckBox
        android:id="@+id/feedback_checkBox_termsConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/feedback_terms_cond"
        />
    <Button
        android:id="@+id/feedback_buvtton_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/feedback_button_sendText"
        android:onClick="goToSaveFeedbackReport"
        android:background="@color/main_button_background"
        android:textColor="@color/white"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        />
    </LinearLayout>

</ScrollView>
