<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ase.eu.proiect.busWayBucharest.AddStopActivity"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/addStop_activity_tv_stopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_name"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/addStop_activity_et_stopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/stop_name"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/add_stop_tv_latitude_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_latitude"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/add_stop_et_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/stop_latitude"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/add_stop_tv_longitude_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_longitude"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/add_stop_et_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/stop_longitude"
            android:inputType="text"
            android:imeOptions="actionDone"
            />
    </LinearLayout>
    <Button
        android:id="@+id/add_stop_add_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/add_line_add_btn"
        android:textColor="@color/white"
        android:background="@color/main_button_background"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/add_stop_delete_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/add_line_delete_btn"
        android:textColor="@color/white"
        android:background="@color/main_button_background"
        android:layout_margin="10dp"
        android:visibility="gone"
        />

</LinearLayout>
