<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.ase.eu.proiect.busWayBucharest.AddLineActivity"
    android:id="@+id/add_line_relativeLayout"

    >
<LinearLayout
    android:id="@+id/add_line_linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/addline_activity_tv_busNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_busNumber_hint"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/add_line_tv_busNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ticket_busNumber_hint"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/addline_activity_tv_startingPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_line_startPoint_hint"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/add_line_tv_startPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_line_startPoint_hint"
            android:inputType="text"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/addline_activity_tv_endingPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_line_endPoint_hint"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/add_line_tv_endPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_line_endPoint_hint"
            android:inputType="text"
            android:imeOptions="actionDone"
            />
    </LinearLayout>
</LinearLayout>
    <Button
        android:id="@+id/add_line_add_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/add_line_add_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/main_button_background"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/add_line_delete_btn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/add_line_delete_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:background="@color/main_button_background"
        android:layout_margin="10dp"
        android:visibility="gone"
        />
</RelativeLayout>
